<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10sp">
                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="20sp"
                    android:paddingBottom="20sp"
                    android:text="@string/heading"
                    android:textColor="@color/black"
                    android:fontFamily="@font/open_sans"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="20sp"
                    android:text="@string/favorites"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvfave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="20sp"
                    android:text="@string/library"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvlibrary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70sp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</ScrollView>