<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_book1"
    android:orientation="vertical"
    android:paddingBottom="60sp"
    tools:context=".BookDetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:gravity="center">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="170dp"
                android:layout_height="232dp"
                android:src="@drawable/logo" />
            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10sp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Author:  "
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/tvAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10sp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Category:  "
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10sp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rating:  "
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10sp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price:  "
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:fontFamily="@font/open_sans"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10sp">

                    <Button
                        android:id="@+id/btnAddtoLibrary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Add to Library"
                        android:backgroundTint="#1B0000"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:paddingBottom="10sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description:"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20sp"
                android:paddingRight="20sp">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="180dp">

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>